tests/parser/bad/stmts_t-send-cid-period-with.scilla
scilla_version 0

contract Test
()

transition arbitrary ()
  send Broken.Identifier
end
